...
        }
        options.showAlert(
          "Confirm form submission",
          message,
          [
            { onPress: cancel, style: "cancel", text: "Cancel" },
            { onPress: () => finish(true), text: "Continue" },
          ],
          { cancelable: true, onDismiss: cancel },
        );
      });
    },
  };
...
